various css fixes: fix image url and table tree flex box and split alignment

--- a/css/app.css
+++ b/css/app.css
@@ -114,3 +114,17 @@
 .app_state_dragging .app__right-col {
   transition: none;
 }
+
+/* Firefox Tweaks */
+.app__main {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.app__toggle-inspector-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
