--- a/css/mixin.css
+++ b/css/mixin.css
@@ -64,6 +64,7 @@
   display: flex;
   flex-direction: row;
   -webkit-align-items: center;
+  align-items: center;
 }
 
 .mixin__property button {
